rework without portfolio

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/styles.css" />
-    <title>ДЗ 3</title>
+    <title>ДЗ 4</title>
   </head>
   <body>
     <header>
@@ -48,7 +48,7 @@
       </div>
     </header>
     <main>
-      <!--ЗАГОЛОВОК И КНОПКА-->
+      <!--HERO-->
       <section class="main">
         <div class="main-box container">
           <h1 class="main-title">Effective Solutions for Your Business</h1>
@@ -56,12 +56,17 @@
         </div>
       </section>
 
-      <!--СПИСОК ЦЕЛЕЙ-->
+      <!--FEATURES-->
       <section class="section">
         <div class="container">
           <h2 class="visually-hidden">Our Features</h2>
           <ul class="features">
             <li>
+              <div class="features-icon-box">
+                <svg class="icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna-1"></use>
+                </svg>
+              </div>
               <h3>Strategy</h3>
               <p>
                 Our goal is to identify the business problem to walk away with
@@ -69,6 +74,11 @@
               </p>
             </li>
             <li>
+              <div class="features-icon-box">
+                <svg class="icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock-1"></use>
+                </svg>
+              </div>
               <h3>Punctuality</h3>
               <p>
                 Bring the key message to the brand's audience for the best price
@@ -76,6 +86,11 @@
               </p>
             </li>
             <li>
+              <div class="features-icon-box">
+                <svg class="icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram-1"></use>
+                </svg>
+              </div>
               <h3>Diligence</h3>
               <p>
                 Research and confirm brands with the strongest digital growth
@@ -83,6 +98,11 @@
               </p>
             </li>
             <li>
+              <div class="features-icon-box">
+                <svg class="icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut-1"></use>
+                </svg>
+              </div>
               <h3>Technologies</h3>
               <p>
                 Design practice focused on digital experiences. We bring forth a
@@ -93,7 +113,7 @@
         </div>
       </section>
 
-      <!--СПИСОК КОМАНДЫ-->
+      <!--TEAM-->
       <section class="team section">
         <div class="container">
           <h2 class="team-title">Our Team</h2>
@@ -107,6 +127,36 @@
               <div class="team-box">
                 <h3>Mark Guerrero</h3>
                 <p>Product Designer</p>
+                <ul>
+                  <li>
+                    <a href="./index.html" target="_blank">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="./index.html" target="_blank">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="./index.html" target="_blank">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="./index.html" target="_blank">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li>
@@ -114,6 +164,36 @@
               <div class="team-box">
                 <h3>Tom Ford</h3>
                 <p>Frontend Developer</p>
+                <ul>
+                  <li>
+                    <a href="./index.html" target="_blank">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="./index.html" target="_blank">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="./index.html" target="_blank">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="./index.html" target="_blank">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li>
@@ -125,6 +205,36 @@
               <div class="team-box">
                 <h3>Camila Garcia</h3>
                 <p>Marketing</p>
+                <ul>
+                  <li>
+                    <a href="./index.html" target="_blank">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="./index.html" target="_blank">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="./index.html" target="_blank">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="./index.html" target="_blank">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li>
@@ -136,13 +246,43 @@
               <div class="team-box">
                 <h3>Daniel Wilson</h3>
                 <p>UI Designer</p>
+                <ul>
+                  <li>
+                    <a href="./index.html" target="_blank">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="./index.html" target="_blank">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="./index.html" target="_blank">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="./index.html" target="_blank">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
         </div>
       </section>
 
-      <!--ПОРТФОЛИО-->
+      <!--PORTFOLIO-->
       <section class="portfolio section">
         <div class="container">
           <h2>Our Portfolio</h2>
@@ -225,6 +365,7 @@
     </main>
     <footer>
       <div class="container">
+        <!-- LEFT BOX -->
         <div class="footer-text">
           <a href="./index.html" class="logo">
             <span class="accent">Web</span><span class="studio">Studio</span>
@@ -233,6 +374,41 @@
             Increase the flow of customers and sales for your business with
             digital marketing & growth solutions.
           </p>
+        </div>
+
+        <!-- RIGHT BOX -->
+        <div class="footer-icon">
+          <p>Social media</p>
+          <ul>
+            <li>
+              <a href="./index.html" target="_blank">
+                <svg class="icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="./index.html" target="_blank">
+                <svg class="icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="./index.html" target="_blank">
+                <svg class="icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="./index.html" target="_blank">
+                <svg class="icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin-1"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
     </footer>
