--- a/index.html
+++ b/index.html
@@ -300,12 +300,21 @@
               </div>
             </li>
             <li class="portfolio-item-list">
-              <img
-                src="./images/payment.jpg"
-                alt="Cashless Payment"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-hover">
+                <img
+                  src="./images/payment.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-hover-text">
+                  <p>
+                    14 Stylish and User-Friendly App Design Concepts &#8226;
+                    Task Manager App &#8226; Calorie Tracker App &#8226; Exotic
+                    Fruit Ecommerce App &#8226; Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-box">
                 <h3>Cashless Payment</h3>
                 <p>Marketing</p>
