--- a/index.html
+++ b/index.html
@@ -288,12 +288,21 @@
           <h2>Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item-list">
-              <img
-                src="./images/bank.jpg"
-                alt="Banking App"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-hover">
+                <img
+                  src="./images/bank.jpg"
+                  alt="Banking App"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-hover-text">
+                  <p>
+                    14 Stylish and User-Friendly App Design Concepts &#8226;
+                    Task Manager App &#8226; Calorie Tracker App &#8226; Exotic
+                    Fruit Ecommerce App &#8226; Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-box">
                 <h3>Banking App</h3>
                 <p>App</p>
@@ -321,48 +330,84 @@
               </div>
             </li>
             <li class="portfolio-item-list">
-              <img
-                src="./images/laptop.jpg"
-                alt="Meditaion App"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-hover">
+                <img
+                  src="./images/laptop.jpg"
+                  alt="Meditaion App"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-hover-text">
+                  <p>
+                    14 Stylish and User-Friendly App Design Concepts &#8226;
+                    Task Manager App &#8226; Calorie Tracker App &#8226; Exotic
+                    Fruit Ecommerce App &#8226; Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-box">
                 <h3>Meditation App</h3>
                 <p>App</p>
               </div>
             </li>
             <li class="portfolio-item-list">
-              <img
-                src="./images/car.jpg"
-                alt="Taxi Service"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-hover">
+                <img
+                  src="./images/car.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-hover-text">
+                  <p>
+                    14 Stylish and User-Friendly App Design Concepts &#8226;
+                    Task Manager App &#8226; Calorie Tracker App &#8226; Exotic
+                    Fruit Ecommerce App &#8226; Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-box">
                 <h3>Taxi Service</h3>
                 <p>Marketing</p>
               </div>
             </li>
             <li class="portfolio-item-list">
-              <img
-                src="./images/phone.jpg"
-                alt="Screen Illustrations"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-hover">
+                <img
+                  src="./images/phone.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-hover-text">
+                  <p>
+                    14 Stylish and User-Friendly App Design Concepts &#8226;
+                    Task Manager App &#8226; Calorie Tracker App &#8226; Exotic
+                    Fruit Ecommerce App &#8226; Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-box">
                 <h3>Screen Illustrations</h3>
                 <p>Design</p>
               </div>
             </li>
             <li class="portfolio-item-list">
-              <img
-                src="./images/woman.jpg"
-                alt="Online Courses"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-hover">
+                <img
+                  src="./images/woman.jpg"
+                  alt="Online Courses"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-hover-text">
+                  <p>
+                    14 Stylish and User-Friendly App Design Concepts &#8226;
+                    Task Manager App &#8226; Calorie Tracker App &#8226; Exotic
+                    Fruit Ecommerce App &#8226; Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-box">
                 <h3>Online Courses</h3>
                 <p>Marketing</p>
