main container width fix

--- a/index.html
+++ b/index.html
@@ -50,9 +50,13 @@
     <main>
       <!--HERO-->
       <section class="main">
-        <div class="main-box container">
-          <h1 class="main-title">Effective Solutions for Your Business</h1>
-          <button type="button" class="main-title-button">Order Service</button>
+        <div class="container">
+          <div class="main-box">
+            <h1 class="main-title">Effective Solutions for Your Business</h1>
+            <button type="button" class="main-title-button">
+              Order Service
+            </button>
+          </div>
         </div>
       </section>
 
